--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@vis.gl/react-google-maps": "^0.7.1",
     "dayjs": "^1.11.10",
     "firebase": "8.2.10",
+    "firebase-tools": "^13.7.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
