--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "8.2.10",
     "firebase-tools": "^13.7.4",
     "react": "^18.2.0",
+    "react-calendly": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "styled-components": "^6.1.8",
